fix card footer link contrast

--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -157,7 +157,12 @@
             line-height: 1.8rem;
         }
         footer a {
-            padding: 0 5px;
+            padding: 0;
+            color: $primary;
+            text-decoration: underline;
+            &:hover {
+                color: $secondary;
+            }
         }
     }
     
